--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,13 @@
 <body>
 
 
-<a href="/newpost">Check In</a>
-<a href="/blog">Blog Page</a>
+    <a href="/blog">Blogs</a>
+    <a href="/">Authors</a>
+    <a href="/login">Login</a>
+    <a href="/signup">Create Account</a>
+    <a href="/newpost">New Entry</a>
+    <a href="/logout">Log Out</a>
+
     {% block content %}
 
     {% endblock %}
